[package]
name = "stacker_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.10.0", default-features = false }
rand_chacha = { version = "0.10.0", default-features = false }
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
heapless = { version = "0.9.2", default-features = false }
